--- a/templates/base.html
+++ b/templates/base.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     {% block content %}{% endblock %}
+    <script type="text/javascript" src="{{ url_for('static', filename='room.js') }}"></script>
 </body>
 </html>
