--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,34 @@
+
+body, html {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1a47a7;
+}
+
+
+form {
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.join .join-buttons {
+  background-color: white
+}
+.join .join-buttons .joined {
+    background-color: green;
+    border-radius: 9px;
+    border-style: none;
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 20px;
+    justify-content: center;
+}
+
 .message-box {
     border-color: black;
     border-width: 2px;
