--- a/templates/devops-room.html
+++ b/templates/devops-room.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="message-box">
-    <h2>Welcome to the DecOps Room</h2>
+    <h2>Welcome to the DevOps Room</h2>
     <div class="messages" id="messages"></div>
     <div class="inputs">
       <input type="text" rows="3" placeholder="Message" name="message" id="user_message"/>
