--- a/templates/devops-room.html
+++ b/templates/devops-room.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Python Room{% endblock %}
+{% block title %}DevOps Room{% endblock %}
 
 {% block content %}
 <div class="message-box">
