--- a/templates/room.html
+++ b/templates/room.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="message-box">
-    <h2>Chat Room: {{code}}</h2>
+    <h2>Secret Chat Room: {{code}}</h2>
     <div class="messages" id="messages"></div>
     <div class="inputs">
       <input type="text" rows="3" placeholder="Message" name="message" id="user_message"/>
