--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<form method="post"
+<form method="post">
     <h3>Join the chat room</h3>
     <div>
         <input type="text" placeholder="Insert name" name="name" value="{{name}}"/>
