--- a/templates/python-room.html
+++ b/templates/python-room.html
@@ -13,7 +13,7 @@
         Send</button>
     </div>
   </div>
-<form method="post" action="{{ url_for('home', name=name) }}">
+<form method="post" action="{{ url_for('views.home', name=name) }}">
   <button id="leave_room" name="leave_room" style="padding: 10px;">Leave Room</button>
 </form>
   {% for msg in messages %}
