--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <form method="post">
     <h3>Join the chat room</h3>
     <div>
-        <input type="text" placeholder="Insert name" name="name" value="{{ request.args.get('name'  ) }}"/>
+        <input type="text" placeholder="Insert name" name="name" value="{{ request.args.get('name') or '' }}"/>
     </div>
 
     <div class="join">
