--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
         <input type="text" placeholder="Room code" name="room_code" value="{{room_code or '' }}"/>
         <div class="join-buttons">
             <button type="submit" name="join-room" class="joined">Join a room</button>
-            <button type="submit" name="create" class="joined">Create a room</button>
+            <button type="submit" name="create" class="joined" value="create">Create a room</button>
         </div>    
     </div>
     {% if error %}
