retrive messages from mongodb

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,10 +23,10 @@
     </ul>
     {% endif %} 
     <div class="rooms">
+        <button type="submit" name="java" class="join" value="General">General</button>
         <button type="submit" name="openpy" class="join" value="Python">Python</button>
-        <button type="submit" name="java" class="join" value="Java">Java</button>
         <button type="submit" name="devops" class="join" value="DevOps">DevOps</button>
-        <button type="submit" name="javascript" class="join" value="Java-Script">Java-Script</button>
+        <button type="submit" name="javascript" class="join" value="Java">Java</button>
     </div>
 </form>
 
