--- a/templates/room.html
+++ b/templates/room.html
@@ -15,13 +15,13 @@
     </div>
   </div>
   <form method="post" action="{{ url_for('views.home', name=name) }}">
-    <button id="leave_room" name="leave_room" style="padding: 10px;">Leave Room</button>
+    <button id="leave_room" name="leave_room">Leave Room</button>
   </form>
 {% for msg in messages %}
 <script type="text/javascript">
-    createMessage("{{msg.name}}", "{{msg.message}}");
-
+    createMessage("{{msg.name}}", "{{msg.message}}, {{msg.time}}");
 </script>
 {% endfor %}
+
 
 {% endblock %}
