--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,9 +2,10 @@
 body, html {
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #1a47a7;
+    background-color: #013565;
 }
 
 
