--- a/static/css/home.css
+++ b/static/css/home.css
@@ -20,6 +20,7 @@
     border-style: solid;
     border-color: #FFD60A;
     border-radius: 10px;
+    color: #fff ;
     font-size: 20px;
     padding: 10px;
     margin-bottom: 10px;
