--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     {% block content %}{% endblock %}
-    <script type="text/javascript" src="{{ url_for('static', filename='room.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('views.static', filename='room.js') }}"></script>
 </body>
 </html>
