--- a/static/css/room.css
+++ b/static/css/room.css
@@ -1,12 +1,12 @@
 .message-box .messages {
-  overflow-y: scroll;
-  width: 100%;
-  height: 100%;
-}
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
+  }
 
 .message-box {
-    width: 750px;
-    height: 600px;
+    width: 650px;
+    height: 380px;
   }
 
   .welcome-head {
@@ -60,6 +60,7 @@
     border-radius: 15px;
     border-style: none;
     background-color: #071C3B;
+    color: #fff;
   }
 
   #send-btn {
