--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 <form method="post" class="home-container">
      
     <form method="post" action="/login">
-        <div style="padding-top: 15%;">
+        <div>
         <input type="text" placeholder="INSERT EMAIL" name="email" class="login-input"/>
         </div>
         <div>
